# Simplification

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: array.h  edge.h  io.h  point.h  triangle.h
src/simplification/: CMakeLists.txt  Simplification.cpp  Simplification.h  main.cpp
